--- a/index.html
+++ b/index.html
@@ -39,14 +39,17 @@
             <h3 class="font-size">on NEET UG 2023</h3>
             <h4 class="font-size">Admissions & Counselling Process</h4>
             <h5 class="font-size">Know All About NEET UG Medical <br> Admissions/Counselling process/Cutoffs/fees</h5>
-            <h6 class="font-size"> <br><span class="text-white"> Date & Time : </span> Sunday, 3:30 PM, 14th May 2023 <br> <br> <span class="text-white"> Venue : </span> Thakur College of Engineering and Technology, A-Block, Gate No 5, <br> Shyamnarayan Thakur Rd, Kandivali East, Mumbai - 400101</h6>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScH3zu0bP_wuQRxMpu5zlZDM0RWEwgt-kr4wGJenLJD0bElaA/viewform" target="_blank" class="btn border-0">Register Now</a>
+            <h6 class="font-size"> <br><span class="text-white"> Date & Time : </span> Sunday, 3:30 PM, 14th May 2023
+                <br> <br> <span class="text-white"> Venue : </span> Thakur College of Engineering and Technology,
+                A-Block, Gate No 5, <br> Shyamnarayan Thakur Rd, Kandivali East, Mumbai - 400101</h6>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScH3zu0bP_wuQRxMpu5zlZDM0RWEwgt-kr4wGJenLJD0bElaA/viewform"
+                target="_blank" class="btn border-0">Register Now</a>
         </div>
     </section>
     <section class="agenda" id="agenda">
         <div class="agenda-content">
             <h2>Seminar Agenda</h2>
-            <p><img src="./assets/images/click.webp" alt="click img"> How to score 600+ in NEET UG 2023?</p>
+            <!-- <p><img src="./assets/images/click.webp" alt="click img"> How to score 600+ in NEET UG 2023?</p>
             <p><img src="./assets/images/click.webp" alt="click img">Mistakes committed by a medical aspirant scoring
                 good NEET Score.</p>
             <p><img src="./assets/images/click.webp" alt="click img">Tips and tricks to get a medical seat at low NEET
@@ -60,6 +63,22 @@
                 Documents Required.</p>
             <p><img src="./assets/images/click.webp" alt="click img">How to crack Multiple state quota counselling and
                 their eligibility norms ?</p>
+            <p><img src="./assets/images/click.webp" alt="click img">How NEET ADVISOR can help you to get into a good
+                medical college?</p> -->
+
+            <!-- Seminar Point` -->
+            <p><img src="./assets/images/click.webp" alt="click img">Maharashtra State Quota Counselling Process.</p>
+            <p><img src="./assets/images/click.webp" alt="click img">Tips and tricks to get a medical seat at low NEET
+                score.</p>
+            <p><img src="./assets/images/click.webp" alt="click img">Mistakes committed by a medical aspirant scoring
+                good NEET Score.</p>
+            <p><img src="./assets/images/click.webp" alt="click img">How to crack Multiple state quota counselling and
+                their eligibility norms?</p>
+            <p><img src="./assets/images/click.webp" alt="click img">15% AIQ/ AIIMS/ JIPMER/ Deemed/ AFMC/ State Quota
+                Counselling.</p>
+            <p><img src="./assets/images/click.webp" alt="click img">How to get a dream college in your fee budget?</p>
+            <p><img src="./assets/images/click.webp" alt="click img">NMC Guidelines/ Counselling Schedule/ Cutoffs/
+                Documents Required.</p>
             <p><img src="./assets/images/click.webp" alt="click img">How NEET ADVISOR can help you to get into a good
                 medical college?</p>
         </div>
@@ -100,6 +119,24 @@
                 </div>
             </div>
         </div>
+        <div class="row g-2 expected-ceo">
+            <h2 class="expert-heading">Exclusive Seminar by our Founder & CEo "Mr. Vipin Bansal"</h2>
+            <div class="col-md-4">
+                    <img width="305px" class="card-img" src="./assets/images/Mr. Vipin sir.webp" alt="">
+            </div>
+            <div class="col-md-8">
+                    <div class="card-content text-start h-100">
+                        <h4>Mr. VIPIN BANSAL </h4>
+                        <p>( Founder and CEO NEET ADVISOR )</p>
+                        <p>Over the 16+ years of expertise, he has guided lakhs of students pan India to make informed
+                            career choices. With a passion to add value and ethics to the education industry, Vipin has
+                            been working towards the cause of providing world-class career counselling services in India
+                            and Abroad. He is working with Top-notch Schools, Colleges and Coaching Institutes to
+                            promote their academic programs by various promotional activities like conducting seminars,
+                            workshops, educational events and so on. To know more, visit at www.vipinbansal.in</p>
+                    </div>
+            </div>
+        </div>
         <h2 class="expert-heading my-6">What NEET Aspirants say about us...</h2>
         <div class="slider_nav">
             <button class="btn-prev"><i class="fas fa-chevron-left"></i></button>
@@ -126,6 +163,34 @@
             </div>
         </div>
     </section>
+    <!-- <section class="experts text-center">
+      
+        <h2 class="expert-heading my-6">What NEET Aspirants say about us...</h2>
+        <div class="slider_nav">
+            <button class="btn-prev"><i class="fas fa-chevron-left"></i></button>
+            <button class="btn-next"><i class="fas fa-chevron-right"></i></button>
+        </div>
+        <div class="owl-carousel youtube-link" id="owl-carousel">
+            <div class="youtube-item">
+                <iframe width="100%" height="230" loading="lazy" class="thumbnail" frameborder="1" allow="accelerometer; autoplay;
+                    encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+                    src="https://www.youtube.com/embed/IPaQa_KdLrE">
+                </iframe>
+            </div>
+            <div class="youtube-item">
+                <iframe width="100%" height="230" loading="lazy" class="thumbnail" frameborder="1" allow="accelerometer; autoplay;
+                    encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+                    src="https://www.youtube.com/embed/GA9RiFlXvBc">
+                </iframe>
+            </div>
+            <div class="youtube-item">
+                <iframe width="100%" height="230" loading="lazy" class="thumbnail" frameborder="1" allow="accelerometer; autoplay;
+                    encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+                    src="https://www.youtube.com/embed/Dt0SOd2dBGk">
+                </iframe>
+            </div>
+        </div>
+    </section> -->
 
     <section class="testimonial">
         <div class="testimonial-heading">
@@ -184,12 +249,12 @@
         </div>
     </section>
 
-    <div class="map">
+    <!-- <div class="map">
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11704.6135271391!2d77.27735407307759!3d28.539164253638532!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce386847e1c93%3A0x535231df782a3e3d!2sNEET%20ADVISOR!5e0!3m2!1sen!2sin!4v1681108551929!5m2!1sen!2sin"
             width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
+    </div> -->
 
     <section class="footer">
         <div class="row align-items-center">
@@ -253,10 +318,11 @@
 
     <div style="position: relative;">
         <a href="tel:+919911203280" class="call-me">
-          <img src="/assets/images/call.png" alt="">
+            <img src="/assets/images/call.png" alt="">
         </a>
-        <a href="https://api.whatsapp.com/send?text=Hello how we can help you ? &amp;phone=9911203280" class="whatsapp-me"  target="_blank">
-          <img height="30px" width="30px" src="/assets/images/whatsapp.webp" alt="">
+        <a href="https://api.whatsapp.com/send?text=Hello how we can help you ? &amp;phone=9911203280"
+            class="whatsapp-me" target="_blank">
+            <img height="30px" width="30px" src="/assets/images/whatsapp.webp" alt="">
         </a>
     </div>
 
