--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </section>
 
     <section class="experts text-center">
-        <div class="row g-3 my-5">
+        <!-- <div class="row g-3 my-5">
             <h2 class="expert-heading">Exclusive Seminar By Doctors & Counselling Experts</h2>
             <div class="col-lg-4 col-md-6 expert-card">
                 <div class="card-head">
@@ -118,7 +118,7 @@
                     <p>( Team NEET Advisor )</p>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="row g-2 expected-ceo">
             <h2 class="expert-heading">Exclusive Seminar by our Founder & CEo "Mr. Vipin Bansal"</h2>
             <div class="col-md-4">
