--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
         <a href="tel:+919911203280" class="call-me">
             <img src="/assets/images/call.png" alt="">
         </a>
-        <a href="https://api.whatsapp.com/send?text=Hello &amp;phone=919911203280"
+        <a href="https://api.whatsapp.com/send?text=Hi Neetadvisor, i  need to get in touch with you regarding.&amp;phone=919911203280"
             class="whatsapp-me" target="_blank">
             <img height="30px" width="30px" src="/assets/images/whatsapp.webp" alt="">
         </a>
