--- a/index.html
+++ b/index.html
@@ -35,20 +35,21 @@
         </div>
         <div class="hero-content">
             <h1 class="color-main my-2"><img width="37px" height="37px" class="mx-2" src="./assets/images/about.webp"
-                    alt="about image"> <span class="text-white">Attend&nbsp;</span> Exclusive Seminar</h1>
+                    alt="about image"> <span class="text-white">Attend&nbsp;</span> Live Webinar</h1>
             <h3 class="font-size">on NEET UG 2023</h3>
             <h4 class="font-size">Admissions & Counselling Process</h4>
             <h5 class="font-size">Know All About NEET UG Medical <br> Admissions/Counselling process/Cutoffs/fees</h5>
-            <h6 class="font-size"> <br><span class="text-white"> Date & Time : </span> Sunday, 3:30 PM, 14th May 2023
+          <!--   <h6 class="font-size"> <br><span class="text-white"> Date & Time : </span> Sunday, 3:30 PM, 14th May 2023
                 <br> <br> <span class="text-white"> Venue : </span> Thakur College of Engineering and Technology,
-                A-Block, Gate No 5, <br> Shyamnarayan Thakur Rd, Kandivali East, Mumbai - 400101</h6>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScH3zu0bP_wuQRxMpu5zlZDM0RWEwgt-kr4wGJenLJD0bElaA/viewform"
-                target="_blank" class="btn border-0">Register Now</a>
+                A-Block, Gate No 5, <br> Shyamnarayan Thakur Rd, Kandivali East, Mumbai - 400101</h6> -->
+            <!-- <a href="https://docs.google.com/forms/d/e/1FAIpQLScH3zu0bP_wuQRxMpu5zlZDM0RWEwgt-kr4wGJenLJD0bElaA/viewform"
+                target="_blank" class="btn border-0">Register Now</a> -->
+                <a class="btn border-0" data-bs-toggle="modal" data-bs-target="#exampleModal">Register Now</a>
         </div>
     </section>
     <section class="agenda" id="agenda">
         <div class="agenda-content">
-            <h2>Seminar Agenda</h2>
+            <h2>Webinar Agenda</h2>
             <!-- <p><img src="./assets/images/click.webp" alt="click img"> How to score 600+ in NEET UG 2023?</p>
             <p><img src="./assets/images/click.webp" alt="click img">Mistakes committed by a medical aspirant scoring
                 good NEET Score.</p>
@@ -66,21 +67,15 @@
             <p><img src="./assets/images/click.webp" alt="click img">How NEET ADVISOR can help you to get into a good
                 medical college?</p> -->
 
-            <!-- Seminar Point` -->
-            <p><img src="./assets/images/click.webp" alt="click img">Maharashtra State Quota Counselling Process.</p>
-            <p><img src="./assets/images/click.webp" alt="click img">Tips and tricks to get a medical seat at low NEET
-                score.</p>
-            <p><img src="./assets/images/click.webp" alt="click img">Mistakes committed by a medical aspirant scoring
-                good NEET Score.</p>
-            <p><img src="./assets/images/click.webp" alt="click img">How to crack Multiple state quota counselling and
-                their eligibility norms?</p>
-            <p><img src="./assets/images/click.webp" alt="click img">15% AIQ/ AIIMS/ JIPMER/ Deemed/ AFMC/ State Quota
-                Counselling.</p>
-            <p><img src="./assets/images/click.webp" alt="click img">How to get a dream college in your fee budget?</p>
-            <p><img src="./assets/images/click.webp" alt="click img">NMC Guidelines/ Counselling Schedule/ Cutoffs/
-                Documents Required.</p>
-            <p><img src="./assets/images/click.webp" alt="click img">How NEET ADVISOR can help you to get into a good
-                medical college?</p>
+            <!-- Webinar Point` -->
+            <p><img src="./assets/images/click.webp" alt="click img">Tips and tricks to get a medical seat at low NEET score (150+/250+/350+).</p>
+            <p><img src="./assets/images/click.webp" alt="click img">NEET Counselling mistakes committed by students scoring good NEET Score (500+/600+).</p>
+            <p><img src="./assets/images/click.webp" alt="click img">How to get a dream medical college in your fee budget?</p>
+            <p><img src="./assets/images/click.webp" alt="click img">15% AIQ/ AIIMS/ JIPMER/ AFMC/ ESI/ Deemed/ State Quota Counselling.</p>
+            <p><img src="./assets/images/click.webp" alt="click img">Impact of increase in no of medical colleges/ fees/ seats/ reservations/ eligibility norms</p>
+            <p><img src="./assets/images/click.webp" alt="click img">Rank vs Marks analysis/ Last three year trend/ Cut offs/ Documentation</p>
+            <p><img src="./assets/images/click.webp" alt="click img">How to crack Multiple state quota counselling</p>
+            <p><img src="./assets/images/click.webp" alt="click img">How NEET ADVISOR can help you to get into a good medical college?</p>
         </div>
         <div class="agenda-img">
             <img width="407px" src="./assets/images/DOCTOR 2ND PAGE.webp" alt="">
@@ -88,8 +83,8 @@
     </section>
 
     <section class="experts text-center">
-        <!-- <div class="row g-3 my-5">
-            <h2 class="expert-heading">Exclusive Seminar By Doctors & Counselling Experts</h2>
+        <div class="row g-3 my-5">
+            <h2 class="expert-heading">Exclusive Webinar By Doctors & Counselling Experts</h2>
             <div class="col-lg-4 col-md-6 expert-card">
                 <div class="card-head">
                     <img width="305px" class="card-img" src="./assets/images/Mr. Vipin sir.webp" alt="">
@@ -118,9 +113,9 @@
                     <p>( Team NEET Advisor )</p>
                 </div>
             </div>
-        </div> -->
-        <div class="row g-2 expected-ceo">
-            <h2 class="expert-heading">Exclusive Seminar by our Founder & CEo "Mr. Vipin Bansal"</h2>
+        </div>
+        <!-- <div class="row g-2 expected-ceo">
+            <h2 class="expert-heading">Exclusive Webinar by our Founder & CEo "Mr. Vipin Bansal"</h2>
             <div class="col-md-4">
                     <img width="305px" class="card-img" src="./assets/images/Mr. Vipin sir.webp" alt="">
             </div>
@@ -132,11 +127,11 @@
                             career choices. With a passion to add value and ethics to the education industry, Vipin has
                             been working towards the cause of providing world-class career counselling services in India
                             and Abroad. He is working with Top-notch Schools, Colleges and Coaching Institutes to
-                            promote their academic programs by various promotional activities like conducting seminars,
+                            promote their academic programs by various promotional activities like conducting Webinars,
                             workshops, educational events and so on. To know more, visit at www.vipinbansal.in</p>
                     </div>
             </div>
-        </div>
+        </div> -->
         <h2 class="expert-heading my-6">What NEET Aspirants say about us...</h2>
         <div class="slider_nav">
             <button class="btn-prev"><i class="fas fa-chevron-left"></i></button>
@@ -306,7 +301,7 @@
                 action="https://docs.google.com/forms/d/e/1FAIpQLSfgUfUzUTCuZybBlaiS4tAPZWue8ByP2QWkXvtOV54idPM-Yg/formResponse"
                 class="col-lg-4 footer-3">
                 <div class="contact">
-                    Call : 9911203280
+                    Call : 8755014151
                 </div>
                 <input name="entry.586680301" type="text" placeholder="Your Email...">
                 <button type="submit">SUBSCRIBE</button>
@@ -317,12 +312,12 @@
     </section>
 
     <div style="position: relative;">
-        <a href="tel:+919911203280" class="call-me">
-            <img src="/assets/images/call.png" alt="">
+        <a href="tel:+918755014151" class="call-me">
+            <img src="assets/images/call.png" alt="">
         </a>
-        <a href="https://api.whatsapp.com/send?text=Hi Neetadvisor, i  need to get in touch with you regarding.&amp;phone=919911203280"
+        <a href="https://api.whatsapp.com/send?text=Hi Neetadvisor, i  need to get in touch with you regarding.&amp;phone=918755014151"
             class="whatsapp-me" target="_blank">
-            <img height="30px" width="30px" src="/assets/images/whatsapp.webp" alt="">
+            <img height="30px" width="30px" src="assets/images/whatsapp.webp" alt="">
         </a>
     </div>
 
@@ -331,7 +326,58 @@
         <h3>Privacy Policy I Terms & Refund Policy I Sitemap</h3>
     </div>
 
+    <!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <div class="modal-content contact-popup">
+            <div class="mt-3 text-center">
+                <p class="btn border-0 modal-title fs-4">Register Now</p>
+                <hr>
+          </div>
+            <div class="modal-body px-5 mb-4">
+                <form method="post" autocomplete="off" name="google-sheet">
+                    <div class="mb-3">
+                         <label>Name<em>*</em></label>
+                         <input type="text" name="Name">
+                    </div>
+                    <div class="mb-3">
+                         <label>Email<em>*</em></label>
+                         <input type="text" name="Email">
+                    </div>
+                    <div class="mb-3">
+                         <label>Phone<em>*</em></label>
+                         <input type="text" name="Phone">
+                    </div>
+                    <input type="submit" name="submit" class="px-4 mt-3" />
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
     <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbwYfswoHbC4cdhVsZQsTayLhCKbCcl5I-EkbU4Ram7nJMvLTb5rTqFIYpYMhyQUaLos/exec';
+        const form = document.forms['google-sheet'];
+
+        form.addEventListener('submit', e => {
+          e.preventDefault();
+          fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+            .then(response => {
+              if (response.ok) {
+                alert("Thanks for Contacting us! We will contact you soon...");
+                form.reset();
+              } else {
+                throw new Error('Error: ' + response.status);
+              }
+            })
+            .catch(error => console.error('Error!', error.message));
+        });
+
+
         $(document).ready(function () {
             let one = $("#owl-carousel")
             let two = $("#testimonial-owl-carousel")
