--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     alt="about image"> <span class="text-white">Attend&nbsp;</span> Live Webinar</h1>
             <h3 class="font-size">on NEET UG 2023</h3>
             <h4 class="font-size">Admissions & Counselling Process</h4>
-            <h5 class="font-size">Know All About NEET UG Medical <br> Admissions/Counselling process/Cutoffs/fees</h5>
+            <h5 class="font-size">Know All About NEET UG Medical <br> Admissions/Counselling Process/Cutoffs/Fees</h5>
           <!--   <h6 class="font-size"> <br><span class="text-white"> Date & Time : </span> Sunday, 3:30 PM, 14th May 2023
                 <br> <br> <span class="text-white"> Venue : </span> Thakur College of Engineering and Technology,
                 A-Block, Gate No 5, <br> Shyamnarayan Thakur Rd, Kandivali East, Mumbai - 400101</h6> -->
@@ -315,7 +315,7 @@
         <a href="tel:+918755014151" class="call-me">
             <img src="assets/images/call.png" alt="">
         </a>
-        <a href="https://api.whatsapp.com/send?text=Hi Neetadvisor, i  need to get in touch with you regarding.&amp;phone=918755014151"
+        <a href="https://api.whatsapp.com/send?text=Hi Neetadvisor, i  need to get in touch with you regarding the counselling.&amp;phone=918755014151"
             class="whatsapp-me" target="_blank">
             <img height="30px" width="30px" src="assets/images/whatsapp.webp" alt="">
         </a>
@@ -331,28 +331,34 @@
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    <div class="modal-dialog  modal-dialog-centered">
         <div class="modal-content contact-popup">
             <div class="mt-3 text-center">
-                <p class="btn border-0 modal-title fs-4">Register Now</p>
+                <h4 class="text-center m-0 p-0 fw-bold"> Want to get a medical seat by Smart Counselling? <br> <span class="color-brand">"Book your free seat for webinar"</span> </h4>
                 <hr>
           </div>
-            <div class="modal-body px-5 mb-4">
-                <form method="post" autocomplete="off" name="google-sheet">
+            <div class="modal-body px-4">
+                <form method="post" name="google-sheet">
                     <div class="mb-3">
                          <label>Name<em>*</em></label>
-                         <input type="text" name="Name">
+                         <input type="text" name="Name" required>
                     </div>
                     <div class="mb-3">
                          <label>Email<em>*</em></label>
-                         <input type="text" name="Email">
+                         <input type="email" name="Email" required>
                     </div>
                     <div class="mb-3">
                          <label>Phone<em>*</em></label>
-                         <input type="text" name="Phone">
+                         <input type="tel" name="Phone" required>
                     </div>
-                    <input type="submit" name="submit" class="px-4 mt-3" />
+                    <div class="mb-3">
+                         <label>City</label>
+                         <input type="text" name="City">
+                    </div>
+                    <div class="d-flex gap-3">
+                        <input type="reset" class="px-4" data-bs-dismiss="modal" value="Close" />
+                        <input type="submit" name="submit" class="px-4 bg-primary-subtle" />
+                    </div>
                 </form>
             </div>
         </div>
@@ -360,6 +366,7 @@
 </div>
 
     <script>
+        
         const scriptURL = 'https://script.google.com/macros/s/AKfycbwYfswoHbC4cdhVsZQsTayLhCKbCcl5I-EkbU4Ram7nJMvLTb5rTqFIYpYMhyQUaLos/exec';
         const form = document.forms['google-sheet'];
 
@@ -422,12 +429,20 @@
                 }
             });
         });
+
     </script>
 
     <!-- 
     <script src="jquery.min.js"></script> -->
     <script src="./assets/owlcarousel/owl.carousel.min.js"></script>
     <script src="script.js"></script>
+    <script>
+        $(document).ready(function() {
+          setTimeout(function() {
+            $('#exampleModal').modal('show');
+          }, 5000);
+        });
+    </script>
 </body>
 
 </html>
