--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
             </div>
             <div class="col-lg-4 col-md-6 expert-card">
                 <div class="card-head">
-                    <img width="305px" class="card-img" src="./assets/images/Dr. Uzma.webp" alt="">
+                    <img width="305px" class="card-img" src="./assets/images/vivek.webp" alt="">
                 </div>
                 <div class="card-content">
-                    <h4>Dr. UZMA HASAN</h4>
-                    <p>( Team NEET Advisor )</p>
+                    <h4>Mr. Vivek Singh</h4>
+                    <p>( Co-Founder NEET Advisor )</p>
                 </div>
             </div>
         </div>
